--- a/src/main/resources/static/kino.html
+++ b/src/main/resources/static/kino.html
@@ -1,10 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Bestilling av kinobilletter</title>
 </head>
+
 <body>
-$END$
+
+<h1>Bestilling av kinobilletter</h1>
+
+<form id="billett">
+    <div style="padding-bottom: 15px">
+        <label for="filmer">Velg film:</label>
+
+        <select name="filmer" id="filmer">
+            <option value="Die Hard">Die Hard</option>
+            <option value="Barbie">Barbie</option>
+            <option value="Interstellar">Interstellar</option>
+            <option value="Treasure Planet">Treasure Planet</option>
+        </select>
+    </div>
+
+    <div style="padding-bottom: 15px">
+        <label for="antall">Antall:</label>
+        <input type="number" id="antall" name="antall" style="max-width: 40px" required>
+    </div>
+
+    <div style="padding-bottom: 5px">
+        <label for="fornavn">Fornavn:</label>
+        <input type="text" id="fornavn" name="fornavn" required>
+    </div>
+
+    <div style="padding-bottom: 5px">
+        <label for="etternavn">Etternavn:</label>
+        <input type="text" id="etternavn" name="etternavn" required>
+    </div>
+
+    <div style="padding-bottom: 5px">
+        <label for="telefonnr">Telefonnr:</label>
+        <input type="tel" id="telefonnr" name="telefonnr" required>
+    </div>
+
+    <div style="padding-bottom: 5px">
+        <label for="epost">Epost:</label>
+        <input type="email" id="epost" name="epost" required>
+    </div>
+
+    <div style="padding-bottom: 5px">
+        <button id="kjopBillett" type="button" value="kjopBillett">
+            Kjøp billett
+        </button>
+    </div>
+
+
+</form>
+
+<div class="mt-8">
+    <h2 class="text-xl font-bold mb-4">Alle billetter</h2>
+
+    <div class="mt-8">
+
+        <table id="billettListe" class="min-w-full divide-y divide-gray-200">
+            <thead class="bg-gray-50">
+            <tr>
+                <th scope="col"
+                    class="px-6 py-3 text-center text-xs font-medium text-gray-500 uppercase tracking-wider">
+                    Film
+                </th>
+                <th scope="col"
+                    class="px-6 py-3 text-center text-xs font-medium text-gray-500 uppercase tracking-wider">
+                    Antall
+                </th>
+                <th scope="col"
+                    class="px-6 py-3 text-center text-xs font-medium text-gray-500 uppercase tracking-wider">
+                    Fornavn
+                </th>
+                <th scope="col"
+                    class="px-6 py-3 text-center text-xs font-medium text-gray-500 uppercase tracking-wider">
+                    Etternavn
+                </th>
+                <th scope="col"
+                    class="px-6 py-3 text-center text-xs font-medium text-gray-500 uppercase tracking-wider">
+                    Telefonnr
+                </th>
+                <th scope="col"
+                    class="px-6 py-3 text-center text-xs font-medium text-gray-500 uppercase tracking-wider">
+                    Epost
+                </th>
+            </tr>
+            </thead>
+        </table>
+    </div>
+    <div style="padding-bottom: 5px">
+        <button id="slettAlle" type="submit">
+            Slett alle billettene
+        </button>
+    </div>
+
+</div>
+
+<script src="kino.js"></script>
 </body>
 </html>
+
