--- a/src/main/resources/static/kino.html
+++ b/src/main/resources/static/kino.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
 <head>
+    <script src="kino.js"></script>
     <meta charset="UTF-8">
     <title>Bestilling av kinobilletter</title>
 </head>
@@ -102,7 +104,6 @@
 
 </div>
 
-<script src="kino.js"></script>
 </body>
 </html>
 
